AC_INIT(src/Rllvm.h)

if test -z "${LLVM_CONFIG}" ; then
 
  AC_PATH_PROG(LLVM_CONFIG, llvm-config)

  if test -z "${LLVM_CONFIG}" ; then
    echo "cannot find llvm-config in your path. Make certain it is installed and in your path"
    exit 1;
  fi

fi


LLVM_VERSION_NUMBER=`${LLVM_CONFIG} --version | sed -e 's/svn//'`
LLVM_VERSION=`${LLVM_CONFIG} --version | sed -e 's/\.[[0-9]]*//' | sed -e 's/svn//'`
LLVM_MINOR_VERSION=`${LLVM_CONFIG} --version | sed -e 's/[[0-9]]\.//' | sed -e 's/svn//'`


CXXFLAGS=`${LLVM_CONFIG} --cxxflags`
AC_LANG(C++)
AC_COMPILE_IFELSE([
#include <llvm/LLVMContext.h>
void foo() {
}
], [echo "Successfully include LLVMContext.h"], 
   [CHECK_IR_DIR=1])

if test -z $CHECK_IR_DIR ; then
AC_COMPILE_IFELSE([
#include <llvm/LLVMContext.h>
void foo() {
}
], [echo "Successfully include LLVMContext.h"], 
   AC_MSG_FAILURE("cannot include llvm/LLVMContext.h. Check that you have a suitable version of llvm installed."))
fi




LLVM_TARGETS="`${LLVM_CONFIG} --targets-built`"

echo "version: $LLVM_VERSION, minor = $LLVM_MINOR_VERSION"
AC_SUBST(LLVM_CONFIG)
AC_SUBST(LLVM_VERSION_NUMBER)
AC_SUBST(LLVM_VERSION)
AC_SUBST(LLVM_MINOR_VERSION)
AC_SUBST(LLVM_TARGETS)

echo ""
echo "*** llvm-config ${LLVM_CONFIG}"
echo ""

AC_OUTPUT(src/Makevars)
AC_OUTPUT(R/targets.R)
